--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "description": "Java Script client shoutbox.",
   "main": "Gruntfile.js",
   "dependencies": {
+    "grunt": "~1.0.1",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt": "~1.0.1",
     "grunt-contrib-uglify": "~0.5.1",
     "grunt-contrib-clean": "~1.0.0",
-    "grunt-contrib-concat": "~1.0.0"
+    "grunt-contrib-concat": "~1.0.0",
+    "grunt-contrib-sass": "~1.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
