--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "grunt-contrib-uglify": "~0.5.1",
     "grunt-contrib-clean": "~1.0.0",
     "grunt-contrib-concat": "~1.0.0",
-    "grunt-contrib-sass": "~1.0.0"
+    "grunt-contrib-sass": "~1.0.0",
+    "grunt-scp": "~0.1.9"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
