--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-clean": "~1.0.0",
     "grunt-contrib-concat": "~1.0.0",
     "grunt-contrib-sass": "~1.0.0",
+    "grunt-contrib-copy": "~1.0.0",
     "grunt-scp": "~0.1.9"
   },
   "scripts": {
